fixes cropping of spiral background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,8 @@ body {
   padding-left: 60px;
   padding-right: 10px;
   padding-bottom: 20px;
-  background: url(recipe_bg.png) top left repeat-y;
+  background: url(recipe_bg.png) top left;
+  background-repeat: round;
   box-shadow: 8px 5px 5px -5px rgba(0,0,0,0.75);
   background-size: contain;
 }
